# axgrad

./: .gitignore  CMakeList.txt  CMakeLists.txt  README.md  arraytest.py  embeddings.py  newtest.py  pyproject.toml  sample_net.py  samples.py  test.py  testing.py
arrays/: __init__.py  extra.py
axgrad/: __init__.py  _core.py  _dtype.py  _functions.py  _grad.py  _helpers.py  _ops.py  _tensor.py  _tesnor.py  _utils.py  arrays.py  base.py  engine.py  helpers.py  modules.py  nn.py  ops.py  tensor.py  utils.py
axgrad.c/: arrays.c
axgrad/autograd/: _backward.py  functions.py  nn.py  norm.py  unary.py
axgrad/autograd/csrc/: basic_back.cpp  basic_back.h  func_back.cpp  func_back.h  norm_back.cpp  norm_back.h  redux_back.cpp  redux_back.h
axgrad/autograd/csrc/kernels/: basic.cpp  basic.h  norm.cpp  norm.h  redux.cpp  redux.h
axgrad/autograd/functions/: activ.py  activations.py  binary_ops.py  ops.py  other_ops.py  shape_ops.py  uniary_ops.py
axgrad/csrc/: binary_ops.cpp  binary_ops.h  cpu.cpp  cpu.h  cuda.cu  cuda.h  distributed.cpp  distributed.h  dtype.cpp  dtype.h  dtypes.c  dtypes.cpp  dtypes.h  functional.cpp  functional.h  redux_ops.cpp  redux_ops.h  shape_ops.cpp  shape_ops.h  tensor.cpp  tensor.h  tensor_ops.cpp  tensor_ops.h  unary_ops.cpp  unary_ops.h  utils.cpp  utils.h
axgrad/csrc/core/: contiguous.cpp  contiguous.h  core.cpp  core.h  dtype.cpp  dtype.h
axgrad/csrc/cpu/: binary_ops.cpp  binary_ops.h  cpu.cpp  helpers.cpp  helpers.h  maths_ops.cpp  maths_ops.h  ops_binary.cpp  ops_binary.h  ops_decomp.cpp  ops_decomp.h  ops_func.cpp  ops_func.h  ops_matrix.cpp  ops_matrix.h  ops_norm.cpp  ops_norm.h  ops_redux.cpp  ops_redux.h  ops_shape.cpp  ops_shape.h  ops_tensor.cpp  ops_tensor.h  ops_unary.cpp  ops_unary.h  ops_vector.cpp  ops_vector.h  shape_ops.cpp  shape_ops.h
axgrad/csrc/cuda/: cuda.cu  cuda.cuh
axgrad/csrc/cuda/kernels/: binary_ops_kernel.cu  binary_ops_kernel.cuh  matmul_kernel.cu  matmul_kernel.cuh  red_ops_kernel.cu  red_ops_kernel.cuh  shape_kernel.cu  shape_kernel.cuh  stats_ops_kernel.cu  stats_ops_kernel.cuh  unary_ops_kernel.cu  unary_ops_kernel.cuh
axgrad/csrc/inc/: random.h
axgrad/csrc/linalg/: decompose.cpp  decompose.h  matrix.cpp  matrix.h  norm.cpp  transform.cpp  transform.h  vector.cpp  vector.h
axgrad/csrc/nn/: norm.cpp  norm.h
axgrad/datasets/: wikipedia.py
axgrad/dtype/: convert.py  dtype.py
axgrad/dtypes/: convert.py
axgrad/helpers/: activations.py  functionals.py  ops.py  shape.py  shapes.py  utils.py
axgrad/linalg/: __init__.py  decompose.py  linear.py  norm.py  vector.py
axgrad/modules/: __init__.py  activations.py  functional.py  matrices.py  nn.py  statics.py
axgrad/nn/: __init__.py  _activations.py  _conv.py  _functional.py  _functions.py  _linear.py  _loss.py  _module.py  _norm.py  _optim.py  _parameters.py  activations.py  functional.py  layernorm.py  linear.py  loss.py  module.py  norm.py  optim.py  parameter.py  parameters.py
axgrad/nn/functionals/: activations.py
axgrad/nn/modules/: embedding.py  linear.py
axgrad/ops/: binary.py  functional.py  functionals.py  main.py  norm.py  reduction.py  redux.py  shape.py  unary.py
axgrad/optimizer/: __init__.py  loss.py  optimizer.py
axgrad/utils/: __init__.py  _dataset.py  _helpers.py  _random.py  _tqdm.py  contiguous.py  shapes.py  tqdm.py  yinyang.py
axon/: __init__.py  _ops.py  arrays.py  backward.py  ops.py  tensor.py  tensor_ops.py
axon/autograd/: _backward.py
axon/autograd/functions/: __init__.py  binary_ops.py  ops.py
axon/axgrad/: __init__.py  engine.py  functional.py  nn.py
axon/axgrad/functions/: __init__.py  activ.py  add.py  binary_ops.py  mul.py  ops.py
axon/axgrad/modules/: __init__.py  activations.py  loss.py  optimizer.py  shape.py
axon/csrc/: cpu.cpp  dtypes.h  tensor.cpp  tensor.h
axon/helpers/: __init__.py  ops.py  shape.py  statics.py  tensor_ops.py  utils.py
axon/modules/: __init__.py  activations.py  functional.py  nn.py
axon/nn/: __init__.py  acitvations.py  functional.py  linear.py  module.py  norm.py  optim.py  parameter.py  parameters.py
axon/nn/functionals/: activations.py
axon/nn/modules/: embeddings.py  modulelist.py  sequential.py
axon/nn/utils/: acitvations.py  loss.py  optim.py
axon/src.c/: CMakeLists.txt  main.c  tensor.c  tensor.h
axon/src.c/modules/: matrices.c
axon/src.cpp/: handle.cpp
axon/utils/: tqdm.py
docs/: User.md  axgradDoc.md  axonDoc.md
examples/: mlp.py  tensor_ops.py
matrix methods/: array.py  convlove.py  matmul.py
nn/: layernorm.py  linear.py
nn/activations/: __init__.py  relu.py
test/: random_test.cpp  test_autograd.py  test_nn.py
test/feat/: test_nn.py
test/unit/: tensor_test.py  utils_test.py
